<resources>
    <string name="app_name">EinkaufslisteApp</string>
    <string name="title">Einkaufsliste</string>
    <string name="button_start_menu">Liste verwalten</string>
    <string name="button_add_list">Liste hinzufügen</string>
    <string name="name_list">Liste 1</string>
    <string name="titleName">Titel</string>
    <string name="item1">Bitte eintragen</string>
    <string name="item2">Bitte eintragen</string>
    <string name="item3">Bitte eintragen</string>
    <string name="item4">Bitte eintragen</string>
    <string name="item5">Bitte eintragen</string>
    <string name="item6">Bitte eintragen</string>
    <string name="item7">Bitte eintragen</string>
    <string name="item8">Bitte eintragen</string>
    <string name="saveListButton">Liste speichern</string>

</resources>