<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ListCreationActivity" android:id="@+id/constraintLayout">
    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/appBar">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/constraintLayoutToolbar">

            <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:theme="?attr/actionBarTheme"
                    android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
            <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                    android:id="@+id/toolBarArrowBack"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/toolbar"
                    android:tint="@color/yellow"
                    android:layout_marginStart="16dp" android:clickable="true"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_menu_save"
                    android:id="@+id/toolBarSave"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/toolBarAdd"
                    android:layout_marginEnd="16dp" android:clickable="true"/>
            <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_baseline_add_24"
                    android:id="@+id/toolBarAdd"
                    app:layout_constraintEnd_toEndOf="@+id/toolbar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:tint="@color/yellow"
                    android:layout_marginEnd="8dp" android:clickable="true"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/listTitle"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/titleName"
            android:text="@string/titleName" android:textStyle="bold" android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="60dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/item1"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/listTitle"
            android:text="ananas"
            android:hint="@string/item1"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="apfel"
            android:ems="10"
            android:id="@+id/item2"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/item1"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/item2"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="saft"
            android:ems="10"
            android:id="@+id/item3"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/item2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/item3"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="kuchen"
            android:ems="10"
            android:id="@+id/item4"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/item3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/item4"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="brot"
            android:ems="10"
            android:id="@+id/item5"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/item4"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/item5"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="oliven"
            android:ems="10"
            android:id="@+id/item6"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/item5"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/item6"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="käse"
            android:ems="10"
            android:id="@+id/item7"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/item6"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/item7"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="fisch"
            android:ems="10"
            android:id="@+id/item8"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/item7"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/item8"/>
</androidx.constraintlayout.widget.ConstraintLayout>
